--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         
     </head>
     <body>
-        <div data-animation></div>
         <div class="bell"></div>
         <div class="top-flare"></div>
+        <h>Game of Trombones</h>
         <div class="bottom-flare"></div>
         <div class="mline"></div>
         <div class="mline2"></div>
