Aggiustati ruoli dei pulsanti
Purtroppo c'è ancora un bug da risolvere...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         
     </head>
     <body>
+
+        <div id="screen"></div>
+
         <div class="bell"></div>
         <div class="top-flare"></div>
         <h>Game of Trombones</h>
