Added sound effects, added sound on/off button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
 
         <div id="screen"></div>
+        <div id="sound_button" class="sound_on">Sound: ON</div>
 
         <div class="bell"></div>
         <div class="top-flare"></div>
