--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         
     </head>
     <body>
-
+        <select id="change_chart">
+            <option value="1">Three Hearts</option>
+            <option value="2">Survival</option>
+            <option value="3">FreePlay</option>
+        </select>
+        <div id="cont"></div>
         <div id="screen"></div>
         <div id="sound_button" class="sound_on">Sound: ON</div>
 
