--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             <option value="2">Survival</option>
             <option value="3">FreePlay</option>
         </select>
+        <select id="velocity">
+            <option value="1">Easy</option>
+            <option value="2">Normal</option>
+            <option value="3">Hard</option>
+        </select>
         <div id="cont"></div>
         <div id="screen"></div>
         <div id="sound_button" class="sound_on">Sound: ON</div>
