--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Page Title</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        
+        <link rel="stylesheet" type="text/css" href="style.css" /> 
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>     
     </head>
     <body>
         <select id="change_chart">
