--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <option value="2">Survival</option>
             <option value="3">FreePlay</option>
         </select>
-        <p5>Difficoulty:</p5>
+        <p5>Difficulty:</p5>
         <select id="velocity">
             <option value="1">Easy</option>
             <option value="2">Normal</option>
