Altre modifiche grafiche

--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
         <div id="notechart">
         </div>
 
-        <div id="cont3"></div>
+        <div id="cont3">
+            <div class="music_1"></div>
+            <div class="music_2"></div>
+            <div class="music_3"></div>
+            <div class="music_4"></div>
+            <div class="music_5"></div>
+            <div class="final_line"></div>
+            <div class="sheetline1"></div>
+        </div>
         <div id="screen"></div>
         <div id="settings"><p3>Settings</p3>
             <p4>Modality:</p4>
@@ -47,9 +55,10 @@
         </div>
         <div id="cont"></div>
         <div id="buttons_cont">
-            <div id="select_notes"><p7>Click to select the notes you want to play</p7> </div>
+            <div id="select_notes"><p7>Select the notes you want to play</p7> 
+                </div>
         </div>
-        <div id="note_to_play_cont"></div>
+        <div id="note_to_play_cont"></div> 
         
 
         <!-- ----------------------------------------------------------------------- -->
