--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Page Title</title>
-        <link rel="stylesheet" type="text/css" href="style.css" /> 
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>     
+        <link rel="stylesheet" type="text/css" href="style.css" />  
+        <script src="lib/sweetalert.min.js" type="text/javascript"></script>  
     </head>
     <body>
         
