Removed "Select the notes..." button

--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
         <div id="sound_button" class="sound_on">Sound: ON</div>
         </div>
         <div id="cont"></div>
-        <div id="buttons_cont">
-            <div id="select_notes"><p7>Select the notes you want to play</p7> 
-                </div>
-        </div>
+        <div id="buttons_cont"></div>
         <div id="note_to_play_cont"></div> 
         
 
