--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <div class="final_line"></div>
             <div class="sheetline1"></div>
         </div>
+        <div id="explain_box"><p8>HINT!<br><br>You can change the sliders by using the mouse or the keys:<br><br>
+            -Z,X,C,V,B,N,M are the positions
+         from 1 to 7<br><br>-1,2,3,4,5 are the pressure levels from 1 to 5 </p8></div>
         <div id="screen"></div>
         <div id="settings"><p3>Settings</p3>
             <p4>Modality:</p4>
